[tool.black]
line-length = 120
extend-exclude = [
    "eigency/eigen_3.2.8"
]

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
extend_skip = [
    "eigency/eigen_3.2.8"
]

[tool.bandit]
exclude = [
    "eigency/eigen_3.2.8"
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "numpy",
    "Cython"
]
build-backend = "setuptools.build_meta"
